<resources>
    <string name="app_name">GameMatematika</string>
    <string name="start_1">Start 1</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="start">START</string>
    <string name="score_0">Score : 0</string>
    <string name="no_1">No 1.</string>
    <string name="_1">1</string>
    <string name="___">. . .</string>
    <string name="_2">2</string>
    <string name="gt"><![CDATA[>]]></string>
    <string name="lt"><![CDATA[<]]></string>
    <string name="eq">=</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="penyelesaian">Penyelesaian:</string>
    <string name="next">Next</string>
    <string name="try_again">Try Again</string>
</resources>