<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/layoutMenu"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="240dp">
        <Button
            android:id="@+id/btnLv1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#4F709C"
            android:text="@string/level_1"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/btnLv2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#4F709C"
            android:text="@string/level_2"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/btnLv3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#4F709C"
            android:text="@string/level_3"
            android:textSize="30sp"/>
    </LinearLayout>
</merge>