<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/gameLevel1"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/textNoLv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:textSize="20sp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/textScoreLv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="10dp"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textColor="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp">
            <TextView
                android:id="@+id/textAlv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="50sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/___"
                android:textSize="50sp"/>
            <TextView
                android:id="@+id/textBlv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="50sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="100dp">
            <Button
                android:id="@+id/btnAnsGtLv1"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:text="@string/gt"
                android:textSize="50sp"/>
            <Button
                android:id="@+id/btnAnsLtLv1"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:text="@string/lt"
                android:textSize="50sp"/>
            <Button
                android:id="@+id/btnAnsEqLv1"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:text='@string/eq'
                android:textSize="50sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/solutionLv1"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:background="@drawable/bg_solution"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:text="@string/penyelesaian"
                        android:textAlignment="center"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/textSolutionLv1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="20sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">
                    <Button
                        android:id="@+id/btnNextQuestLv1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#C38154"
                        android:text="@string/next"
                        android:textSize="20sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</merge>