<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/gameLevel2"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/textNoLv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:textSize="20sp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/textScoreLv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="10dp"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textColor="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/textAlv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"/>
                <View
                    android:layout_width="80dp"
                    android:layout_height="5dp"
                    android:background="@color/black"/>
                <TextView
                    android:id="@+id/textBlv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/___"
                    android:textSize="50sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/textClv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"/>
                <View
                    android:layout_width="80dp"
                    android:layout_height="5dp"
                    android:background="@color/black"/>
                <TextView
                    android:id="@+id/textDlv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="70dp">
            <Button
                android:id="@+id/btnAnsGtLv2"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:text="@string/gt"
                android:textSize="50sp"/>
            <Button
                android:id="@+id/btnAnsLtLv2"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:text="@string/lt"
                android:textSize="50sp"/>
            <Button
                android:id="@+id/btnAnsEqLv2"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:text='@string/eq'
                android:textSize="50sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/solutionLv2"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:background="@drawable/bg_solution"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:text="@string/penyelesaian"
                        android:textAlignment="center"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/textSolutionLv2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="20sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">
                    <Button
                        android:id="@+id/btnNextQuestLv2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#C38154"
                        android:text="@string/next"
                        android:textSize="20sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</merge>